fixed vertical align issue on answer boxes and cleaned up html css comments

--- a/resources/style.css
+++ b/resources/style.css
@@ -20,6 +20,8 @@ body {
 
 /*****************  player selection modal ******************/
 
+
+
 .playerOnHoverLeft, .playerOnHoverRight {
   width: 30vw;
   height: 100vh;
@@ -32,7 +34,6 @@ body {
     background-image: url('images/backgrounds/particleBG.gif');
     background-position: center;
     background-size: cover;
-    /*display: none;*/
     background-color: #475eff;
 }
 
@@ -70,13 +71,13 @@ body {
 .infoHeader {
   color: #ffdd00;
 }
-.infoHeaderName{
+.infoHeaderName, .infoHeaderNameRight {
     color: yellow;
 }
-.infoHeaderPower{
+.infoHeaderPower, .infoHeaderPowerRight {
     color: yellow;
 }
-.infoHeaderOccupation{
+.infoHeaderOccupation, .infoHeaderOccupationRight {
     color: yellow;
 }
 
@@ -106,10 +107,6 @@ body {
     position: absolute;
     top: 76vh;
     padding: 5px;
-    /*border-radius: 5%;*/
-    /*border: 4px solid black;*/
-    /*background-color: rgba(245,245,220,0.6);*/
-
     border: 1px solid;
     border-radius: 20px;
     background-color: rgba(0,0,0,0.6);
@@ -128,28 +125,16 @@ body {
     transform: scaleX(-1);
 }
 
-.playerContainerLeft {
-    /*rotateY(135deg);*/
-    /*-webkit-transform: rotateY(135deg); !* Safari *!*/
-    /*transform: rotateY(180deg);*/
-}
-
 .playerSelectionContainer {
-    /*border-left: 5px solid black;
-    border-right: 5px solid black;*/
     height: 100vh;
     width: 40vw;
     display: inline-block;
     vertical-align: top;
-    /*background-repeat: no-repeat;*/
-    /*background-color: rgba(145,145,120,0.6);*/
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
     border: 1px solid;
-    /*border-radius: 20px;*/
     background-color: rgba(0,0,0,0.6);
 }
 
@@ -167,7 +152,6 @@ body {
   margin: 0.5vh auto;
   text-align: center;
 }
-
 
 .gameTitle {
   color: #ffdd00;
@@ -228,18 +212,14 @@ h1 {
 }
 
 .playerAvatar:hover {
-    /*box-shadow: inset 0 0 20px red;*/
     border-color: yellow;
 }
 
 .playerAvatarClicked {
-    /*box-shadow: inset 0 0 20px red;*/
     filter: grayscale(1)
 }
 
 .playButton {
-    /*width: 100%;
-    height: 100%;*/
     font-family: fighting;
     font-size: 10vmin;
     position: absolute;
@@ -308,11 +288,9 @@ h1 {
 }
 
 
-
-
-
-
 /************************** gameboard ****************************/
+
+
 
 .gameBoard {
     height: 100vh;
@@ -393,7 +371,6 @@ h1 {
     letter-spacing: 3px;
 }
 
-
 .currentTime {
   position: absolute;
   top: 50%;
@@ -405,7 +382,6 @@ h1 {
 .player1, .player2 {
     height: 85vh;
     width: 25vw;
-    /*border: 1px solid;*/
     position: absolute;
     top: 58%;
     background-image: none;
@@ -436,8 +412,6 @@ h1 {
     font-family: sans-serif;
     background-color: rgba(140,140,140,0.75);
     border-radius: 5vmin;
-
-    /* Lori added opacity, Brian added opacity on the bgcolor...see if they play nicely together then remove comment */
     opacity: 0;
     transition: 0.75s;
 }
@@ -446,47 +420,53 @@ h1 {
     opacity: 1;
 }
 
-
 .questionContainer, .answerContainer {
     font-family: 'Ubuntu', sans-serif;
     width: 90%;
     height: 40%;
     border: 1px solid whitesmoke;
     margin: 5% auto;
-    font-size: 1.5vw;
+    font-size: 2vmin;
     background-color: #d3d2d2;
     border-radius: 3vmin;
 }
 
-
 .answer {
     font-family: 'Ubuntu', sans-serif;
+    font-size: 2vmin;
     width: 45%;
     height: 20%;
     border: 1px solid whitesmoke;
     display: inline-block;
     box-sizing: border-box;
-    padding-top: 5%;
+    padding: 5% 0;
     background-color: rgb(65,61,61);
     color: whitesmoke;
     border-radius: 1vmin;
     cursor: pointer;
+    vertical-align: top;
 }
+
 .answer:hover{
     background-color: gray;
 }
 
 .category{
     display: block;
-    position: relative;
-    top: 50px;
+    position: absolute;
+    /*top: 50px;*/
     opacity: 0.5;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
 
-
 /*************************** winner modal **************************/
+
+
+
 
 .winnerModal {
     height: 100vh;
@@ -497,14 +477,11 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-
 }
 
 .modal{
     border: 1px solid black;
 }
-
-
 
 .winningCharacter{
     top: 10%;
@@ -512,7 +489,6 @@ h1 {
     width: 25vw;
     height: 80vh;
     position: absolute;
-    /*transform: scaleX(-1);*/
     animation: spin 4s infinite;
     animation-timing-function: cubic-bezier(0.1, 0.2, 0.3, 1.5);
     animation-iteration-count: 1;
@@ -520,20 +496,16 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-
 }
 
 @keyframes spin{
-
     from {transform: rotateY(0deg)}
-    to {transform: rotateY(540deg)}
-
+    to {transform: rotateY(360deg)}
 }
 
 .winningCharacter img{
     width: 100%;
     height: 100%;
-
 }
 
 .chuckNorrisQuote{
@@ -546,7 +518,6 @@ h1 {
     position: absolute;
     background-color: rgba(0,0,0,0.6);
     padding: 1%;
-
 }
 
 .chuckNorrisQuote p {
@@ -563,15 +534,9 @@ h1 {
     margin: 0;
 }
 
-/*.chuckNorrisQuote p{*/
-    /*margin: 0 auto;*/
-    /**/
-/*}*/
-
 .restart {
     top: 70%;
     left: 70%;
-    /*width: 20vw;*/
     height: 10vh;
     position: absolute;
 }
@@ -586,9 +551,6 @@ h1 {
 
 .playAgain{
     border: 0px solid;
-    /*border: 1px solid black;*/
-    /*border-radius: 20px;*/
-    /*width: 100%;*/
     height: 100%;
     font-family: ss4;
     font-size: 5vmin;
@@ -598,7 +560,12 @@ h1 {
     text-shadow: 0px 0px 20px black;
 }
 
+
+
 /*********************** Ready modal ************************/
+
+
+
 
 .readyBanner {
   width: 100vw;
